[package]
name = "k210-pac"
version = "0.2.1"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for K210 SoC"
repository = "https://github.com/riscv-rust/k210-pac"
keywords = ["riscv", "k210", "register", "peripheral"]
license = "ISC"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"
critical-section = { version = "1.2.0", optional = true }
riscv = "0.12.1"
riscv-rt = { version = "0.13.0", optional = true }
vcell = "0.1.2"

[features]
rt = ["riscv-rt"]
critical-section = ["dep:critical-section"]

